# vibe-check

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
Formula/: vibecheck.rb
install/: install.sh
src/: config.rs  diff.rs  git.rs  hook.rs  main.rs  quiz.rs  stats.rs  team.rs
templates/ci/: vibecheck.yml
templates/project/.claude/: settings.json  vibecheck.json
templates/project/.claude/skills/quiz/: SKILL.md
templates/project/.claude/skills/vibecheck/: SKILL.md
