[package]
name = "vibe-check"
version = "0.2.1"
edition = "2021"
rust-version = "1.70"
description = "Reality checks for vibe coders. One question per diff."
license = "MIT"
repository = "https://github.com/akshan-main/vibe-check"
homepage = "https://github.com/akshan-main/vibe-check"
keywords = ["claude", "vibe-coding", "developer-tools", "code-review", "comprehension"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "vibecheck"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[profile.release]
strip = true
lto = true
opt-level = "z"
